k8s/01-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-ns
  labels:
    name: ecommerce
    environment: production
