k8s/06-mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: ecommerce-ns
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
