k8s/09-ecommerce-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-svc
  namespace: ecommerce-ns
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: ecommerce-app
